--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.6.0",
+    "framer-motion": "^3.10.2",
     "gatsby": "^2.32.3",
     "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.11.0",
